--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,9 @@
 
+<app-navbar></app-navbar>
 
-<app-header></app-header>
 
-<app-search-box class="homeSelect"></app-search-box>
+
+
 
 
 <router-outlet></router-outlet>
