--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -9,8 +9,8 @@
   
   .secondToolbar {
     position: fixed;
-    z-index: 2;
-    background: rgb(123, 176, 212);
+    z-index: 30;
+    background: #cacaca;
     top: 0;
     height: 0;
     opacity: 0;
@@ -59,4 +59,78 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+}
+
+
+
+
+
+
+.banner{
+  
+  
+
+  position: relative;
+  margin-top: -4%;
+  
+  margin-right: -200px;
+  width: 100%;
+  height: 100vh;
+  
+  overflow: hidden;
+  
+
+}
+
+.banner.video{
+  position: absolute;
+  z-index: 1;
+  
+  top: 200;
+  left: 0;
+ 
+  object-fit:cover;
+  width: 100%;
+  height: 100%;
+  
+}
+
+
+
+img {
+ 
+  position: absolute;
+  z-index: 2;
+  
+  width: 100%;
+  height: 850px;
+  opacity: 38%;
+  
+
+ top: 200px;
+
+
+animation: animate2 7s linear infinite;
+}
+
+
+
+@keyframes animate2 {
+  0%
+  {
+    opacity: 0%;
+    transform: scale(1);
+  }
+  25%,75%
+  {
+    opacity: 50%;
+   
+  }
+  100%
+  {
+    opacity:78%;
+    transform: scale(2);
+    padding-top: 20;
+    
+}
 }
