--- a/src/app/search-box/search-box.component.css
+++ b/src/app/search-box/search-box.component.css
@@ -103,6 +103,7 @@ p {
   .container {
     margin-top: 60px;
     margin-left: 20px;
+    width: 800px;
   }
 
   .form-group{
@@ -116,7 +117,7 @@ p {
   }
 
   .bouton{
-    margin-left: 940px;
+    margin-left: 800px;
     margin-top:-80px;
     
     border-radius: 5px;
@@ -166,11 +167,7 @@ p {
     width: 500px;
   }
 
-  .ng5-slider .ng5-slider-pointer {
-    
-    background-color: #00d8ff !important;
-    font-family: 'Poppins', sans-serif;
-  }
+ 
 
 
 
